[gd_scene load_steps=12 format=3 uid="uid://dwf6la4amul67"]

[ext_resource type="Script" uid="uid://djd5he3tsty7q" path="res://scenes/Test_scenes/Draggable_Outline_Scene.gd" id="1_ksug5"]
[ext_resource type="Script" uid="uid://du0q65xomok4t" path="res://scenes/Test_scenes/shape_drop_area.gd" id="2_mykmi"]
[ext_resource type="Texture2D" uid="uid://c71yl0yuulc21" path="res://assets/Inventory/Inventory_Items/wrench.png" id="2_wq5n5"]
[ext_resource type="PackedScene" uid="uid://cucgabq38ngxs" path="res://scenes/Test_scenes/DragArea.tscn" id="4_cm1ik"]
[ext_resource type="Script" uid="uid://7br27ugagkbp" path="res://scenes/Test_scenes/test_shapes.gd" id="4_mykmi"]
[ext_resource type="PackedScene" uid="uid://diltp38ph8r2c" path="res://scenes/Test_scenes/Inventory_tests.tscn" id="5_wq5n5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oyyac"]
bg_color = Color(0.417969, 0.345212, 0.267761, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.214844, 0.136152, 0.0520325, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8nj6p"]
bg_color = Color(0.73, 0.73, 0.73, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.21, 0.21, 0.21, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc43r"]
size = Vector2(119, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74cf5"]
size = Vector2(6, 6)

[sub_resource type="LabelSettings" id="LabelSettings_8kp3w"]
font_size = 50

[node name="DraggableOutline" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ksug5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1192.0
offset_top = 154.0
offset_right = 1726.0
offset_bottom = 914.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oyyac")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 282.0
offset_top = 154.0
offset_right = 816.0
offset_bottom = 914.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8nj6p")

[node name="DroppableZone" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 1213.0
offset_top = 179.0
offset_right = 1705.0
offset_bottom = 890.0
columns = 3

[node name="Control" type="Control" parent="DroppableZone"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("2_mykmi")

[node name="Draggable Detection" type="Area2D" parent="DroppableZone/Control"]
scale = Vector2(1.08, 1.08)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DroppableZone/Control/Draggable Detection"]
shape = SubResource("RectangleShape2D_fc43r")

[node name="Shape_box" type="Sprite2D" parent="DroppableZone/Control/Draggable Detection"]
self_modulate = Color(0, 0, 0, 0.545098)
texture = ExtResource("2_wq5n5")
region_rect = Rect2(1, 22, 98, 93)

[node name="Draggable Zone" parent="." instance=ExtResource("4_cm1ik")]
offset_left = 362.0
offset_top = 243.0
offset_right = 737.0
offset_bottom = 811.0

[node name="Draggable Detection" parent="Draggable Zone" index="0"]
position = Vector2(187, 291)
scale = Vector2(5.97466, 9.32069)

[node name="Draggable" type="Control" parent="Draggable Zone"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 139.5
offset_top = 232.5
offset_right = 139.5
offset_bottom = 232.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_mykmi")

[node name="Texture" type="Sprite2D" parent="Draggable Zone/Draggable"]
texture = ExtResource("2_wq5n5")

[node name="Button" type="TextureButton" parent="Draggable Zone/Draggable"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -57.5
offset_right = 60.5
offset_bottom = 57.5
grow_horizontal = 2
grow_vertical = 2

[node name="Draggable Detection" type="Area2D" parent="Draggable Zone/Draggable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Draggable Zone/Draggable/Draggable Detection"]
shape = SubResource("RectangleShape2D_74cf5")

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 852.0
offset_top = 48.0
offset_right = 1074.0
offset_bottom = 175.0
text = "Save"

[node name="Load" type="Button" parent="."]
layout_mode = 0
offset_left = 1139.0
offset_top = 49.0
offset_right = 1361.0
offset_bottom = 176.0
text = "Load"

[node name="ChangeLevel" type="Button" parent="."]
layout_mode = 0
offset_left = 952.0
offset_top = 223.0
offset_right = 1174.0
offset_bottom = 350.0
text = "Change Level"

[node name="ChangeLevel2" type="Button" parent="."]
layout_mode = 0
offset_left = 883.0
offset_top = 898.0
offset_right = 1105.0
offset_bottom = 1025.0
text = "Change Level"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1014.0
offset_top = 476.0
offset_right = 1116.0
offset_bottom = 589.0
text = "‚ùå"
label_settings = SubResource("LabelSettings_8kp3w")

[node name="Inventory" parent="." instance=ExtResource("5_wq5n5")]
offset_left = -36.0
offset_top = 147.0
offset_right = -36.0
offset_bottom = 147.0

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="ChangeLevel" to="." method="_on_change_level_pressed"]
[connection signal="pressed" from="ChangeLevel2" to="." method="_on_goto_test_area"]

[editable path="Draggable Zone"]
